--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <input id="input" type="search" autocomplete="off" spellcheck="false" role="combobox" placeholder="Search Google or type a URL" aria-live="polite">
 
 <body>
-  <table cellspacing="utf-8">
+  <table cellspacing="20">
   <h1>Bharath Gogulamudi</h1>
   <table>
     <td>
