--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Bharath's personal page</title>
   <style>
   body {
-    background-color: #FFE9A0
+    background-color: green
   }
     body {
       text-align: left;
@@ -27,9 +27,8 @@
 <input id="input" type="search" autocomplete="off" spellcheck="false" role="combobox" placeholder="Search Google or type a URL" aria-live="polite">
 
 <body>
-  <table cellspacing="20">
   <h1>Bharath Gogulamudi</h1>
-  <table>
+  <table cellspacing="20">
     <td>
       <img src="images/bharath.png" alt="bharath.png">
     </td>
@@ -144,7 +143,6 @@
     </li>
   </ul>
   <hr>
-</table>
 </body>
 <form class="" action="index.html" method="post">
   <label>Your name:</label>
